# eUtil

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  eUtil.cpp  features.md  readme.md  todo.md
libBuild/hdr/: binaryarraybuffer.hpp  binarybuffer.hpp  bitset.hpp  buffer.hpp  defines.hpp  eutil.hpp  file.hpp  filecore.hpp  fileio.hpp  fioc.hpp  fios.hpp  idp.hpp  signaltimer.hpp  thread.hpp  threadPool.hpp  timer.hpp  util.hpp
libBuild/include/eutil/: Assert.hpp  ahc.hpp  app.hpp  conceps.hpp  eutil.hpp  fioc.hpp  idp.hpp  signaltimer.hpp  slr.hpp  timer.hpp
libBuild/include/eutil/app/: app.hpp
libBuild/include/eutil/buffer/: Array.hpp  ahc.hpp  (+7 more)
libBuild/src/: Assert.cpp  ahc.cpp  app.cpp  binaryarraybuffer.cpp  binarybuffer.cpp  bitset.cpp  eutil.cpp  file.cpp  filecore.cpp  fioc.cpp  fios.cpp  idp.cpp  signaltimer.cpp  slr.cpp  timer.cpp  util.cpp
libBuild/src/app/: app.cpp
libBuild/src/buffer/: Array.cpp  Array2.cpp  ahc.cpp  array.cpp  idp.cpp  imagedata.cpp  indexpool.cpp
libBuild/src/event/: event.cpp  eventdispatcher.cpp
libBuild/src/filesystem/: File.cpp  FileIO.Generic.cpp  FileLoad.cpp  FileWrite.cpp  fileiocore.cpp  fileiostream.cpp  fioc.cpp  fios.cpp  hotloader.cpp  saveloadrule.cpp  slr.cpp
libBuild/src/scene/: scene.cpp  scenemanager.cpp
libBuild/src/time/: signaltimer.cpp  time.cpp  timer.cpp
tests/: CMakeLists.txt  test_util.hpp
tests/ahc/: CMakeLists.txt  test.cpp
tests/array/: CMakeLists.txt  test.cpp
tests/bab/: CMakeLists.txt  bab.cpp
tests/bb/: CMakeLists.txt  bb.cpp
tests/bs/: CMakeLists.txt  bs.cpp
tests/event/: CMakeLists.txt
tests/f/: CMakeLists.txt  file.cpp
tests/f_simple/: CMakeLists.txt  file.cpp
tests/filesystem/: CMakeLists.txt  test.cpp
tests/fioc/: CMakeLists.txt  test.cpp
tests/fios/: CMakeLists.txt  test.cpp
tests/slr/: CMakeLists.txt  test.cpp
(+19 files in other folders)
